# Pediatric_Spindles_HI

./: .gitignore  README.md  authors.json  pyproject.toml  references.bib  requirements.txt
assets/: inside172.mat
scripts/: run.sh
src/: README.md  age_hi_interaction.py  age_hi_roi_interaction.py  behavioral_models.py  bootstrap_cluster_effect.py  build_main.py  build_supplement.py  cluster_permutation.py  compute_figure_data.py  compute_rois_corrected.py  generate_manuscript_figures.py  generate_methods_stats_figure.py  generate_montage_figure.py  hi_robustness_figure.py  loo_sensitivity.py  roi_29ch_sensitivity.py  spindle_common.py
